# Datasakura_test

./: README.md  koks.json  mars.json  oin.json  pyproject.toml
app/: logic.py  main.py  models.py  test_logic.py
